--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-SAS GAMAEI O VAGELIS
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>SAS GAMAEI O VAGELIS</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+
+
+<body>
+    <header id="main-header">
+        <div class="container">
+            <h1>STIS HARES KAI STIS LYPES MAZI</h1>
+        </div>
+    </header>
+    <nav id="navbar">
+        <div class="container">
+            <ul>
+                <li><a href="#">SKOUPA</a></li>
+                <li><a href="#">FARASI</a></li>
+                <li><a href="#">KAFEDAKI</a></li>
+                <li><a href="#">KREVATI</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <section id="showcase">
+        <div class="container">
+            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </h1>
+        </div>
+    </section>
+    <div class="container">
+        <section id="main">
+            <h1>KALWS TA PAIDIA</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic ullam quidem facilis, nihil consequuntur sunt dicta corrupti et suscipit cum exercitationem perferendis amet a soluta beatae, velit necessitatibus porro consequatur.
+            </p>
+        </section>
+        <aside id="sidebar">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum autem error omnis cum. Facere eaque praesentium </p>
+        </aside>
+    </div>
+    <footer id="main-footer">
+        <p>Copyright &copy;2019 Vagelaras</p>
+    </footer>
+</body>
+
+</html>
