third commit-new text

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>SAS GAMAEI O VAGELIS</title>
+    <title>χορευει και γουσταρει ο σαλονικιος</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -10,35 +10,35 @@
 <body>
     <header id="main-header">
         <div class="container">
-            <h1>STIS HARES KAI STIS LYPES MAZI</h1>
+            <h1>και οι μπαγλαμάδες ν' αρχίσουν τσιφτετελια</h1>
         </div>
     </header>
     <nav id="navbar">
         <div class="container">
             <ul>
-                <li><a href="#">SKOUPA</a></li>
-                <li><a href="#">FARASI</a></li>
-                <li><a href="#">KAFEDAKI</a></li>
-                <li><a href="#">KREVATI</a></li>
+                <li><a href="#">να</a></li>
+                <li><a href="#">ανάψουνε</a></li>
+                <li><a href="#">τα</a></li>
+                <li><a href="#">τέλια</a></li>
             </ul>
         </div>
     </nav>
 
     <section id="showcase">
         <div class="container">
-            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            <h1>ΟΛΟΤΑΧΩΣ
             </h1>
         </div>
     </section>
     <div class="container">
         <section id="main">
-            <h1>KALWS TA PAIDIA</h1>
+            <h1>και τα μπουζούκια να κάψουν το πατάρι</h1>
             <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic ullam quidem facilis, nihil consequuntur sunt dicta corrupti et suscipit cum exercitationem perferendis amet a soluta beatae, velit necessitatibus porro consequatur.
+                χχχΧορεύει και γουστάρει ο σαλονικιος
             </p>
         </section>
         <aside id="sidebar">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum autem error omnis cum. Facere eaque praesentium </p>
+            <p>Στράτος Διονυσίου</p>
         </aside>
     </div>
     <footer id="main-footer">
